--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -26,3 +26,12 @@ div.title { height: 38px; line-height: 38px; padding: 0 10px; margin: 0 1px 0 0;
 body.template { }
 .template .template-wrap { }
 .template .template-wrap canvas { }
+
+
+#instructions {
+	margin-left: 60px;
+}
+
+#instructions_para {
+	font-size: 25px;
+}
